--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mamon</title>
+    <link href="css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"> 
     <!-- надо перед основным файлом это поставитсщьь-->
@@ -74,9 +75,138 @@
                     
                     </div>
             </div>
-
             </div>
         </div>
+        <div class="page page-top">
+            <div class="wrap">
+                <h2>OUR CLIENTS</h2>
+                <div class="clients">
+                    <div class="clients__item">
+                        <img src="img/logo-lightspeed.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-trvl.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-spider-strategies.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-tripadvisor.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-shutterfly.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-decos.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-tiqets.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-hotelchamp.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-flitsmeister.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-sap.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-redkix.svg" alt="">
+                    </div>
+                    <div class="clients__item">
+                        <img src="img/logo-nos.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="page page-top">
+            <div class="wrap">
+                <h2>OUR TEAM</h2>
+                <div class="team">
+                    <div class="team__item">
+                        <img src="img/workers/vadim.jpg" alt="">
+                        <div>
+                            <h3>Vadim</h3>
+                            <p>Managing Director</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/sergey.png" alt="">
+                        <div>
+                            <h3>Sergey</h3>
+                            <p>Technology Director</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/andrey.png" alt="">
+                        <div>
+                            <h3>Andrey</h3>
+                            <p>Front-end Developer</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/alex.png" alt="">
+                        <div>
+                            <h3>Alex</h3>
+                            <p>Front-end Developer</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/agneshka_maksimik.png" alt="">
+                        <div>
+                            <h3>Agneshka</h3>
+                            <p>Mobile Developer</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/dmitry_shindin 2.png" alt="">
+                        <div>
+                            <h3>Dmitry</h3>
+                            <p>Back-end Developer</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/artyom_khomyakov.png" alt="">
+                        <div>
+                            <h3>Artyom</h3>
+                            <p>MBack-end Developer</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/evgeniy.png" alt="">
+                        <div>
+                            <h3>Evgeny</h3>
+                            <p>Product Designer</p>
+                        </div>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/workers/tomash_svorobovich 2.png" alt="">
+                        <div>
+                            <h3>Tom</h3>
+                            <p>Product Designer</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <footer>
+           <div class="footer"> 
+                <div class="wrap box-footer">
+                    <a href="#" class="logo">
+                        <img src="/img/logo.svg" alt="mamon logo">
+                    </a>
+                    <ul class="social">
+                        <li><a href="#" target="blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fab fa-behance"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fab fa-codepen"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <script defer src="js/all.js"></script>
     </main>
 </body>
 </html>
